@@ -1,6 +1,7 @@
  * Fix Greek translations
  * Updated Russian translations from filimonic
  * Update Spanish translations (closes: #766)
+ * Update Czech translations (closes: #743)
 
 KeePassDroid (2.0)
  * Remove beta warning
